Moved the project name declaration in dmake out of dmake.cmake, and into the project CMakeLists.txt. Made Monarch.hpp's private members protected, and made the destructor virtual, so I could inherit from the class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,15 @@
 ##################
 
 cmake_minimum_required( VERSION 2.8 )
+project( Monarch )
+
 include( ${PROJECT_SOURCE_DIR}/dmake/dmake.cmake )
 
 #########
 # setup #
 #########
 
-dmake_project_begin( Monarch 0 1 0 )
+dmake_project_begin( ${PROJECT_NAME} 0 1 0 )
 
 ########################
 # monarch dependencies #
